--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/Assets/AssetStoreTools*
+
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+Assets/AssetStoreTools*
 
 # Visual Studio cache directory
 .vs/
@@ -34,6 +34,3 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-/.vs
-/.vscode
-/Library
